--- a/lectures/overview/overview.tex
+++ b/lectures/overview/overview.tex
@@ -542,7 +542,7 @@ Type \rust{A} implements \mintinline{Rust}{core::ops::Unveil} \rust{B} means tha
 \frametitle{Monad Implementation}
 \mintinline{Rust}{Class} monad in Husky for classification tasks in machine learning, from custom package
 
- \includegraphics[width=\linewidth]{snapshots/husky_impl_unveil_for_result.png}
+ \includegraphics[width=\linewidth]{snapshots/husky_class.png}
 \end{frame}
 
 
